# simplex-lang

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  THIRD-PARTY-NOTICES.txt
example/: test.sx
lib/: llvm.cmake
lib/antlr4-runtime/: CMakeLists.txt
lib/simdutf/: CMakeLists.txt
src/: main.cpp
src/AST/: AST.hpp  Visitor.hpp
src/Grammar/: Simplex.g4  Simplex.interp  SimplexBaseVisitor.cpp  SimplexBaseVisitor.h  SimplexBaseVisitor.java  SimplexLexer.cpp  SimplexLexer.g4  SimplexLexer.h  SimplexLexer.interp  SimplexLexer.java  SimplexLexer.tokens  SimplexParser.cpp  SimplexParser.g4  SimplexParser.h  SimplexParser.interp  SimplexParser.java  SimplexParser.tokens  SimplexParserBaseVisitor.cpp  SimplexParserBaseVisitor.h  SimplexParserVisitor.cpp  SimplexParserVisitor.h  SimplexVisitor.cpp  SimplexVisitor.h  SimplexVisitor.java
src/Util/: CommandLineUtil.cpp  CommandLineUtil.hpp  SimdutfCharStream.cpp  SimdutfCharStream.hpp  StringUtil.cpp  StringUtil.hpp
